--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+    <div class= "header">
+        <p>Add a point by reaching the water, loose a point by hitting a bug.</p>
+        <p id = "score"></p>
+            <script src="js/resources.js"></script>
+            <script src="js/app.js"></script>
+            <script src="js/engine.js"></script>
+        <button type="button" onclick= "player.resetButton()" value = "Restart game" > Reset game </button>
+    </div>
 </body>
 </html>
